# gtk

./: .gitignore  CMakeLists.txt  build.sh  custom.supp  run_with_valgrind.sh
assets/: app.glade
src/: main.cpp
